http://bugzilla.zimbra.com/show_bug.cgi?id=8155 bug: 8155 - No scrollbars in contact picker when needed Needed to remove the "DwtChooserListView > div" selector which was setting the "Label" style which set the overflow set to hidden (wrong!) Owen, you may want to confirm this as the right fix :)

--- a/Ajax/WebRoot/js/config/style/dwt.css
+++ b/Ajax/WebRoot/js/config/style/dwt.css
@@ -1138,12 +1138,6 @@
 	@BoxMargin@
 }
 
-/* simple rows that don't contain tables */
-/* ??? SHOTGUN */
-.DwtChooserListView > div {
-	@Label@
-}
-
 /*
  * DwtShellBusyDialog - dialog that comes up when the server is taking a long time to respond
  */
